--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"NODE_ENV=production ts-node index.ts",
+    "start": "NODE_ENV=production ts-node index.ts",
     "dev": "nodemon index.ts"
   },
   "keywords": [],
@@ -21,12 +21,14 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validation": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
